j--/tests/pass/RShiftAssign.java
package pass;

public class RShiftAssign {
	public int eval(int a, int b) {
		a >>= b;
		return a;
	}
}
