j--/tests/fail/RShiftAssign.java
package fail;

public class RShiftAssign {

	public static void main(String args[]) {
		System.out.println("c" >>= "b");
	}

}
